tests/baselines/reference/invalidStringAssignments.errors.txt
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(3,5): error TS2322: Type 'string' is not assignable to type 'boolean'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(4,5): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(5,5): error TS2322: Type 'string' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(9,5): error TS2322: Type 'string' is not assignable to type 'C'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(12,5): error TS2322: Type 'string' is not assignable to type 'I'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(14,5): error TS2322: Type '1' is not assignable to type '{ baz: string; }'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(15,5): error TS2322: Type '1' is not assignable to type '{ 0: number; }'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(18,1): error TS2539: Cannot assign to 'M' because it is not a variable.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(21,5): error TS2322: Type 'string' is not assignable to type 'T'.
  'string' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(23,1): error TS2539: Cannot assign to 'i' because it is not a variable.
tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts(26,5): error TS2322: Type 'string' is not assignable to type 'E'.


==== tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts (11 errors) ====
    var x = '';
    
    var a: boolean = x;
        ~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
    var b: number = x;
        ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    var c: void = x;
        ~
!!! error TS2322: Type 'string' is not assignable to type 'void'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~
!!! error TS2322: Type 'string' is not assignable to type '{|C|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts:8:7
    
    interface I { bar: string; }
    var f: I = x;
        ~
!!! error TS2322: Type 'string' is not assignable to type '{|I|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts:11:11
    
    var g: { baz: string } = 1;
        ~
!!! error TS2322: Type '1' is not assignable to type '{ {|baz|0|}: string; }'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts:14:10
    var g2: { 0: number } = 1;
        ~~
!!! error TS2322: Type '1' is not assignable to type '{ {|0|0|}: number; }'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts:15:11
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2539: Cannot assign to 'M' because it is not a variable.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type 'string' is not assignable to type '{|T|0|}'.
!!! error TS2322:   'string' is assignable to the constraint of type '{|T|1|}', but '{|T|2|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts:20:12
!!! annotated symbol 1 tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts:20:12
!!! annotated symbol 2 tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts:20:12
    }
    i = x;
    ~
!!! error TS2539: Cannot assign to 'i' because it is not a variable.
    
    enum E { A }
    var j: E = x;
        ~
!!! error TS2322: Type 'string' is not assignable to type '{|E|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/primitives/string/invalidStringAssignments.ts:25:6